# pixel-pushing

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  context.cpp  context.h  glad.c  main.cpp  window.cpp  window.h
hello_triangle/: hello_triangle.cpp  hello_triangle.h
miniray/: image.ppm  main.cpp  miniray.hpp
opengl/: glad.c  main.cpp  util.hpp  window.cpp  window.hpp
opengl/shader/: base.frag  shader.hpp
shader/: shader.cpp  shader.h
shader/source/: base.frag
shaders/: shader.cpp  shader.h  shaders.cpp  shaders.h
shaders/source/: base.frag  base.vert
src/: main.cpp  window.cpp  window.h
src/shader/: shader.cpp
